--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,22 @@
           </div>
           <div class="nav-links">
             <ul>
-              <li class="nav-link">Home</li>
-              <li class="nav-link">Tasks</li>
-              <li class="nav-link">About Us</li>
-              <li class="nav-link">Contact Us</li>
+              <div class="nav-link-div">
+                <span><i class="fa-solid fa-house"></i></span>
+                <li class="nav-link">Home</li>
+              </div>
+              <div class="nav-link-div">
+                <span><i class="fa-solid fa-list-check"></i></span>
+                <li class="nav-link">Tasks</li>
+              </div>
+              <div class="nav-link-div">
+                <span><i class="fa-solid fa-address-card"></i></span>
+                <li class="nav-link">About Us</li>
+              </div>
+              <div class="nav-link-div">
+                <span><i class="fa-solid fa-list-check"></i></span>
+                <li class="nav-link">Contact Us</li>
+              </div>
             </ul>
             <form class="seach-bar searchForm">
               <input type="search" placeholder="Search" name="searchbar" />
@@ -35,6 +47,84 @@
             </form>
           </div>
         </nav>
+      </div>
+    </section>
+    <section class="footer-area">
+      <div class="footer">
+        <footer class="footer-foot">
+          <div class="about">
+            <div class="info-icons">
+              <span class="globe">
+                <i class="fa-solid fa-globe"></i>
+              </span>
+              <span class="check">
+                <i class="fa-solid fa-list-check"></i>
+              </span>
+              <span class="clipboard-check">
+                <i class="fa-solid fa-clipboard-check"></i>
+              </span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+              itaque maiores excepturi assumenda ab nam eius quos beatae modi
+              hic.
+            </p>
+          </div>
+          <div class="other-info">
+            <div class="contacts">
+              <h3>Contacts</h3>
+              <ul>
+                <a
+                  href="https://www.linkedin.com/in/omkarsase/"
+                  target="_blank"
+                >
+                  <div class="social-icons linkedin">
+                    <span><i class="fa-brands fa-linkedin-in"></i></span>
+                    <li>Linkedin</li>
+                  </div>
+                </a>
+                <a href="mailto:saseomkar214@gmail.com" target="_blank">
+                  <div class="social-icons mail">
+                    <span>
+                      <i class="fa-solid fa-envelope"></i>
+                    </span>
+                    <li>Email</li>
+                  </div>
+                </a>
+                <a href="https://www.instagram.com/_omkarsase/" target="_blank">
+                  <div class="social-icons instagram">
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                    <li>Instagram</li>
+                  </div>
+                </a>
+                <a href="https://twitter.com/_OmkarSase" target="_blank">
+                  <div class="social-icons twitter">
+                    <span>
+                      <i class="fa-brands fa-twitter"></i>
+                    </span>
+                    <li>Twitter</li>
+                  </div>
+                </a>
+              </ul>
+            </div>
+            <div class="features">
+              <h3>Featuers</h3>
+              <ul>
+                <li>How It Works</li>
+                <li>Pricing</li>
+                <li>Templates</li>
+              </ul>
+            </div>
+            <div class="company">
+              <h3>Company</h3>
+              <ul>
+                <li>About us</li>
+                <li>Privacy</li>
+                <li>Terms & Conditions</li>
+              </ul>
+            </div>
+          </div>
+        </footer>
       </div>
     </section>
     <script src="./js/index.js"></script>
